--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,11 @@
     <!-- Required for AR -->
     <uses-permission android:name="android.permission.CAMERA" />
 
+
+    <!-- Required for Recording -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,16 +22,13 @@
         tools:ignore="GoogleAppIndexingWarning">
 
         <meta-data
-            android:name="com.viromedia.API_KEY"
+            android:name="6C528CF8-92F9-4CAF-A543-AC937B2CFC4C"
             android:value="API_KEY_HERE" />
         <meta-data
             android:name="com.google.ar.core"
             android:value="required" />
 
-        <activity
-            android:name=".MainActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:screenOrientation="landscape">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
